Grease Pencil Icons do not match in Outliner vs Dope Sheet Editor #95397

Closed
opened 2022-02-01 15:43:04 +01:00 by rd · 12 comments

System Information
Operating system: macOS-12.2-x86_64-i386-64bit 64 Bits
Graphics card: Intel(R) Iris(TM) Plus Graphics 655 Intel Inc. 4.1 INTEL-18.4.6

Blender Version
Broken: version: 3.1.0 Alpha, branch: master, commit date: 2022-01-24 22:18, hash: 2bf519d211
Worked: (newest version of Blender that worked as expected)

Short description of error
Grease Pencil Icons do not match in Outliner vs Dopesheet
default Outliner and Dope Sheet .png

If you look at the "red" box you will see that the icon is not the same for Grease Pencil Data (Outliner vs Dope Sheet)

Grease Pencil Icons - Dope Sheet vs Outliner.png

(yellow box shows the "Draw Mode" icon in Dope Sheet - in my opinion, It should be changed to something else like Icon used for "Grease Pencil Objects" - Green icon with endpoints

Dope Sheet Dropdown Menu.png

Exact steps for others to reproduce the error
[Please describe the exact steps needed to reproduce the issue]

  1. File >New > 2D Animation
  2. Draw on the screen
  3. Open Outliner Editor
  4. Open Dope Sheet Editor ( in the Dope Sheet Editor Mode select "Grease Pencil" Mode
  5. CHANGE THE NAME OF THE "GREACE PENCIL OBJECT DATA" (green icon with endpoint) in Outliner or Dopesheet

Note:
Outliner Editor icons
The icon for Grease Pencil Object in Outliner is "Orange" line
The icon for Grease Pencil Object Data in Outliner is "Green" line with end points

Dope Sheet Editor icons
The icon for "Grease Pencil Mode" in drop down box is "Drawing Mode" icon for 3D ViewPort
The icon for Grease Pencil Object Data Channel area is "Drawing Mode" icon for 3D ViewPort

From the blender documentation
Channels Region

Grease Pencil (light blue)
The channels’ region shows the Grease Pencil data-blocks containing the layers. Multiple blocks are used for each area (e.g. one for the 3D Viewport and the Image editor).

Layers (gray)
These channels contain the keyframes to which the
layers are bound.

The icon for Grease Pencil Object Data in Dope sheet Channel Region should be "Green" line with end points ( as I am suggesting) or "Orange" line

As an artist , icons in the User Interface really help me understand how use the user interface in blender. I believe this change could be made and really help the clarity of Blender , The dopesheet and UI.

Blender is a wonderful tool and thanks again to all the developers.
I know these can be tough changes....but I think this might be needed for making UI clarity.

Smartdog
We all learn by sharing what we know

**System Information** Operating system: macOS-12.2-x86_64-i386-64bit 64 Bits Graphics card: Intel(R) Iris(TM) Plus Graphics 655 Intel Inc. 4.1 INTEL-18.4.6 **Blender Version** Broken: version: 3.1.0 Alpha, branch: master, commit date: 2022-01-24 22:18, hash: `2bf519d211` Worked: (newest version of Blender that worked as expected) **Short description of error** Grease Pencil Icons do not match in Outliner vs Dopesheet ![default Outliner and Dope Sheet .png](https://archive.blender.org/developer/F12839392/default_Outliner_and_Dope_Sheet_.png) If you look at the "red" box you will see that the icon is not the same for Grease Pencil Data (Outliner vs Dope Sheet) ![Grease Pencil Icons - Dope Sheet vs Outliner.png](https://archive.blender.org/developer/F12839292/Grease_Pencil_Icons_-_Dope_Sheet_vs_Outliner.png) (yellow box shows the "Draw Mode" icon in Dope Sheet - in my opinion, It should be changed to something else like Icon used for "Grease Pencil Objects" - Green icon with endpoints ![Dope Sheet Dropdown Menu.png](https://archive.blender.org/developer/F12839320/Dope_Sheet_Dropdown_Menu.png) **Exact steps for others to reproduce the error** [Please describe the exact steps needed to reproduce the issue] 1) File >New > 2D Animation 2) Draw on the screen 3) Open Outliner Editor 4) Open Dope Sheet Editor ( in the Dope Sheet Editor Mode select "Grease Pencil" Mode 5) CHANGE THE NAME OF THE "GREACE PENCIL OBJECT DATA" (green icon with endpoint) in Outliner or Dopesheet Note: Outliner Editor icons The icon for Grease Pencil Object in Outliner is "Orange" line The icon for Grease Pencil Object Data in Outliner is "Green" line with end points Dope Sheet Editor icons The icon for "Grease Pencil Mode" in drop down box is "Drawing Mode" icon for 3D ViewPort The icon for Grease Pencil Object Data Channel area is "Drawing Mode" icon for 3D ViewPort From the blender documentation Channels Region Grease Pencil (light blue) The channels’ region shows the Grease Pencil data-blocks containing the layers. Multiple blocks are used for each area (e.g. one for the 3D Viewport and the Image editor). Layers (gray) These channels contain the keyframes to which the layers are bound. The icon for Grease Pencil Object Data in Dope sheet Channel Region should be "Green" line with end points ( as I am suggesting) or "Orange" line As an artist , icons in the User Interface really help me understand how use the user interface in blender. I believe this change could be made and really help the clarity of Blender , The dopesheet and UI. Blender is a wonderful tool and thanks again to all the developers. I know these can be tough changes....but I think this might be needed for making UI clarity. Smartdog We all learn by sharing what we know
Author

Added subscriber: @Smartdog

Added subscriber: @Smartdog
Member

Added subscribers: @antoniov, @lichtwerk

Added subscribers: @antoniov, @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Needs Developer To Reproduce'

Changed status from 'Needs Triage' to: 'Needs Developer To Reproduce'
Member

Colorcoding I would say is not a bug (monochrome versions being used in animation editors is common to all object types in blender, not just greasepencil).

Code uses different icons, ICON_GREASEPENCIL, OUTLINER_OB_GREASEPENCIL, OUTLINER_DATA_GREASEPENCIL (not sure though why they are so different?

@antoniov:

  • rna_enum_id_type_items usually uses the _DATA version of the icon, want to check intentions?
  • can you comment on the difference between ICON_GREASEPENCIL & OUTLINER_OB_GREASEPENCIL

Dont think this is a bug, just asking

Colorcoding I would say is not a bug (monochrome versions being used in animation editors is common to all object types in blender, not just greasepencil). Code uses different icons, `ICON_GREASEPENCIL`, `OUTLINER_OB_GREASEPENCIL`, `OUTLINER_DATA_GREASEPENCIL` (not sure though why they are so different? @antoniov: - `rna_enum_id_type_items` usually uses the `_DATA` version of the icon, want to check intentions? - can you comment on the difference between `ICON_GREASEPENCIL` & `OUTLINER_OB_GREASEPENCIL` Dont think this is a bug, just asking
Author

Just to be clear:

This is the default Outliner Editor and Dope Sheet Editor ( Grease Pencil Mode) setup
default Outliner and Dope Sheet .png

These images are suggestion for UI Clarity in Dope Sheet Channel Region ( the potential bug with icon) and a suggestion for the dope sheet Grease Pencil mode drop down menu.
Suggested Grease Pencil Icons - Dope Sheet and Outliner.png
Dope Sheet Dropdown Menu.png

Just to be clear: This is the default Outliner Editor and Dope Sheet Editor ( Grease Pencil Mode) setup ![default Outliner and Dope Sheet .png](https://archive.blender.org/developer/F12839657/default_Outliner_and_Dope_Sheet_.png) These images are suggestion for UI Clarity in Dope Sheet Channel Region ( the potential bug with icon) and a suggestion for the dope sheet Grease Pencil mode drop down menu. ![Suggested Grease Pencil Icons - Dope Sheet and Outliner.png](https://archive.blender.org/developer/F12839675/Suggested_Grease_Pencil_Icons_-_Dope_Sheet_and_Outliner.png) ![Dope Sheet Dropdown Menu.png](https://archive.blender.org/developer/F12839679/Dope_Sheet_Dropdown_Menu.png)

Added subscriber: @mendio

Added subscriber: @mendio

In #95397#1299343, @lichtwerk wrote:
Colorcoding I would say is not a bug (monochrome versions being used in animation editors is common to all object types in blender, not just greasepencil).

Code uses different icons, ICON_GREASEPENCIL, OUTLINER_OB_GREASEPENCIL, OUTLINER_DATA_GREASEPENCIL (not sure though why they are so different?

@antoniov:

  • rna_enum_id_type_items usually uses the _DATA version of the icon, want to check intentions?
  • can you comment on the difference between ICON_GREASEPENCIL & OUTLINER_OB_GREASEPENCIL

Dont think this is a bug, just asking

Really not sure about why we used an icon... I guess this is the result of developments in different moments and we would need to run a UI icon cleanup to ensure we are consistent. @mendio What do you think about icons? Do you think we can improve consistency?

> In #95397#1299343, @lichtwerk wrote: > Colorcoding I would say is not a bug (monochrome versions being used in animation editors is common to all object types in blender, not just greasepencil). > > Code uses different icons, `ICON_GREASEPENCIL`, `OUTLINER_OB_GREASEPENCIL`, `OUTLINER_DATA_GREASEPENCIL` (not sure though why they are so different? > > @antoniov: > - `rna_enum_id_type_items` usually uses the `_DATA` version of the icon, want to check intentions? > - can you comment on the difference between `ICON_GREASEPENCIL` & `OUTLINER_OB_GREASEPENCIL` > > Dont think this is a bug, just asking Really not sure about why we used an icon... I guess this is the result of developments in different moments and we would need to run a UI icon cleanup to ensure we are consistent. @mendio What do you think about icons? Do you think we can improve consistency?
Author

After more investigation, the Channel Region of the Dope Sheet Editor ( while in Grease Pencil Mode) Icons are the only icon/s that needs to be reviewed.

As an Artist and teacher, the UI consistency is why I am suggesting a change to Icon/s in Channel Region of the Dope Sheet Editor ( while in "Grease Pencil Mode").

If you rename the Object Data (green squiggle icon) in the Outliner Editor or rename the Channel (solid pencil icon) in the Channel Region of the Dope Sheet Editor you will see the UI Visual inconsistency I am trying to point out:

  • There are different Icons next to the same name ( ok this can be explained by Every 2D Layer correspond to a Channel in the Dope Sheet editor (in Grease Pencil mode). But does not explain why the "Draw mode Icon" mode was chosen , In my option, for UI clarity, a different icon could/should be used.

Making the following observations (as I understand Grease Pencil iconography - please let me know if I am not understand something correctly):

3D Viewport Editor:

  • Draw Mode Icon (solid pencil icon) Ok..... this make sense visually and structurally 3D Viewport - Draw Mode Icon .png

Outliner Editor:

  • Show Mode Column ( Solid Pencil icon )
  • Grease Pencil Objects ("Orange" squiggle icon)
  • Grease Pencil Data Object ( "Green" squiggle icon)
  • Grease Pencil Layer ( outline Pencil icon with solid eraser)

When put all these icons together....all make sense ( at least to me ) structurally and visually:
I read as "Object selected in Draw Mode > Grease Pencil Object > Grease Pencil Object Data > Grease Pencil Layer"
Outliner - Grease Pencil Icons working together.png

Dope Sheet (Grease Pencil mode)

  • Dope Sheet Drop down
    • Draw Mode Icon ( Solid Pencil icon )
  • Channel Region
    • Channel ( Grease Pencil Data Object) Draw Mode Icon ( Solid Pencil icon ) ** This could/should be Grease Pencil Object Data icon
    • Channel ( Grease Pencil Layer) ( No Icon at all)

Dope Sheet - Grease Pencil Mode.png

The drop down box use of "Draw Mode Icon" works and makes visual sense.

What does not make a lot of sense visually is using the "Draw Mode Icon" again in the Channel Region to express "Grease Pencil data-blocks containing the layers"
as it states in the Blender Documentation for Dope Sheet ( Grease Pencil Mode)

Here is the Blender Documentation for Dope Sheet ( Grease Pencil Mode):
Dope Sheet ( Grease Pencil Mode )

@mendio I would like to suggest this visual solution/change to the Dope Sheet ( Grease Pencil Mode)
Suggested fix for Grease Pencil Mode.png

Suggested fix for Dope Sheet (Grease Pencil mode)

Dope Sheet Drop down
Draw Mode Icon ( Solid Pencil icon )
Channel Region
Channel - Grease Pencil Data Object (Grease Pencil Object Data icon - mono color )
Channel - Grease Pencil Layer ( No Icon at all)

This all visually "reads" so much better, in my opinion and logical links the Channels to the Layers in the Outliner and Properties Editors. It uses the same visual structure and visual language.

@antoniov @mendio Thank you both ( and to the other Grease pencil developers. Your work is really appreciated and amazing...my suggestions to improve this part of Blender are to make it the developers vision clearer for Artist and other Blenderheads to use ( like Ton always talks about).

.

After more investigation, the Channel Region of the Dope Sheet Editor ( while in Grease Pencil Mode) Icons are the only icon/s that needs to be reviewed. As an Artist and teacher, the UI consistency is why I am suggesting a change to Icon/s in Channel Region of the Dope Sheet Editor ( while in "Grease Pencil Mode"). **If you rename the Object Data (green squiggle icon) in the Outliner Editor or rename the Channel (solid pencil icon) in the Channel Region of the Dope Sheet Editor you will see the UI Visual inconsistency I am trying to point out:** - There are different Icons next to the same name ( ok this can be explained by Every 2D Layer correspond to a Channel in the Dope Sheet editor (in Grease Pencil mode). But does not explain why the "Draw mode Icon" mode was chosen , In my option, for UI clarity, a different icon could/should be used. Making the following observations (as I understand Grease Pencil iconography - please let me know if I am not understand something correctly): *3D Viewport Editor*: - Draw Mode Icon (solid pencil icon) Ok..... this make sense visually and structurally ![3D Viewport - Draw Mode Icon .png](https://archive.blender.org/developer/F12841764/3D_Viewport_-_Draw_Mode_Icon_.png) *Outliner Editor:* - Show Mode Column ( Solid Pencil icon ) - Grease Pencil Objects ("Orange" squiggle icon) - Grease Pencil Data Object ( "Green" squiggle icon) - Grease Pencil Layer ( outline Pencil icon with solid eraser) When put all these icons together....all make sense ( at least to me ) structurally and visually: I read as "Object selected in Draw Mode > Grease Pencil Object > Grease Pencil Object Data > Grease Pencil Layer" ![Outliner - Grease Pencil Icons working together.png](https://archive.blender.org/developer/F12841784/Outliner_-_Grease_Pencil_Icons_working_together.png) *Dope Sheet (Grease Pencil mode)* - Dope Sheet Drop down - Draw Mode Icon ( Solid Pencil icon ) - Channel Region - Channel ( Grease Pencil Data Object) Draw Mode Icon ( Solid Pencil icon ) ** This could/should be Grease Pencil Object Data icon - Channel ( Grease Pencil Layer) ( No Icon at all) ![Dope Sheet - Grease Pencil Mode.png](https://archive.blender.org/developer/F12841872/Dope_Sheet_-_Grease_Pencil_Mode.png) The drop down box use of "Draw Mode Icon" works and makes visual sense. What does not make a lot of sense visually is using the "Draw Mode Icon" again in the Channel Region to express "Grease Pencil data-blocks containing the layers" as it states in the Blender Documentation for Dope Sheet ( Grease Pencil Mode) Here is the Blender Documentation for Dope Sheet ( Grease Pencil Mode): [Dope Sheet ( Grease Pencil Mode )](https://docs.blender.org/manual/en/latest/editors/dope_sheet/grease_pencil.html) @mendio I would like to suggest this visual solution/change to the Dope Sheet ( Grease Pencil Mode) ![Suggested fix for Grease Pencil Mode.png](https://archive.blender.org/developer/F12841907/Suggested_fix_for_Grease_Pencil_Mode.png) Suggested fix for Dope Sheet (Grease Pencil mode) Dope Sheet Drop down Draw Mode Icon ( Solid Pencil icon ) Channel Region Channel - Grease Pencil Data Object (Grease Pencil Object Data icon - mono color ) Channel - Grease Pencil Layer ( No Icon at all) This all visually "reads" so much better, in my opinion and logical links the Channels to the Layers in the Outliner and Properties Editors. It uses the same visual structure and visual language. @antoniov @mendio Thank you both ( and to the other Grease pencil developers. Your work is really appreciated and amazing...my suggestions to improve this part of Blender are to make it the developers vision clearer for Artist and other Blenderheads to use ( like Ton always talks about). .

IMHO the icon change makes sense. I have done a test.

image.png

Now it seems more consistent.

@mendio if you agree, I can commit the change.

IMHO the icon change makes sense. I have done a test. ![image.png](https://archive.blender.org/developer/F12842026/image.png) Now it seems more consistent. @mendio if you agree, I can commit the change.
Antonio Vazquez self-assigned this 2022-02-02 15:49:33 +01:00

In #95397#1300191, @antoniov wrote:
IMHO the icon change makes sense. I have done a test.

image.png

Now it seems more consistent.

@mendio if you agree, I can commit the change.

Yes, this was legacy from the first Grease Pencil implementation in the dopesheet, it's ok for me to go ahead with the icon change as in your mockup

> In #95397#1300191, @antoniov wrote: > IMHO the icon change makes sense. I have done a test. > > ![image.png](https://archive.blender.org/developer/F12842026/image.png) > > Now it seems more consistent. > > @mendio if you agree, I can commit the change. Yes, this was legacy from the first Grease Pencil implementation in the dopesheet, it's ok for me to go ahead with the icon change as in your mockup

This issue was referenced by f0cfa94d94

This issue was referenced by f0cfa94d94c70b2410cc9e7474ebb3c6edcb2e16

Changed status from 'Needs Developer To Reproduce' to: 'Resolved'

Changed status from 'Needs Developer To Reproduce' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#95397
No description provided.