Fix T95397: Grease Pencil Icons do not match in Outliner vs Dope Sheet Editor

There was an inconsistency between icons.